CTest: ctest_memcheck() should also write Test.xml files for CDash usage
Currently, when running ctest_memcheck
, the test suite is run, but there seems to be no way to submit the test results to CDash. I tried just submitting it in vtk/vtk!7969 (merged) but it doesn't actually submit anything.
/cc @zackgalbreath