ctest_memcheck: generate `DynamicAnalysis-Test.xml` as well

This is useful so that memcheck results also show up as test results on
CDash. It will be submitted with the other `MemCheck` parts.

Fixes: #22190