Help/release/dev/ctest_memcheck-generate-test.xml.rst
@@ -1,0 +1,6 @@
+ctest_memcheck-generate-test.xml
+--------------------------------
+
+* The :command:`ctest_memcheck` command now also generates a
+  `DynamicAnalysis-Test.xml` file which may be used to submit test results to
+  CDash.
